TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMI
Rule 3     bloc -> statement SEMI
Rule 4     params -> NAME
Rule 5     params -> NAME COMMA params
Rule 6     statement -> IF LPAREN expression RPAREN LACC bloc RACC
Rule 7     statement -> WHILE LPAREN expression RPAREN LACC bloc RACC
Rule 8     statement -> FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
Rule 9     statement -> PRINT LPAREN expression RPAREN
Rule 10    statement -> NAME EGAL expression
Rule 11    statement -> DEF NAME LPAREN params RPAREN LACC bloc RACC
Rule 12    statement -> RETURN expression
Rule 13    expression -> expression INF expression
Rule 14    expression -> expression INFEG expression
Rule 15    expression -> expression SUP expression
Rule 16    expression -> expression EGALEGAL expression
Rule 17    expression -> expression AND expression
Rule 18    expression -> expression OR expression
Rule 19    expression -> expression PLUS expression
Rule 20    expression -> expression TIMES expression
Rule 21    expression -> expression MINUS expression
Rule 22    expression -> expression DIVIDE expression
Rule 23    expression -> NAME LPAREN params RPAREN
Rule 24    expression -> LPAREN expression RPAREN
Rule 25    expression -> NUMBER
Rule 26    expression -> NAME

Terminals, with rules where they appear

AND                  : 17
COMMA                : 5
DEF                  : 11
DIVIDE               : 22
EGAL                 : 10
EGALEGAL             : 16
FOR                  : 8
IF                   : 6
INF                  : 13
INFEG                : 14
LACC                 : 6 7 8 11
LPAREN               : 6 7 8 9 11 23 24
MINUS                : 21
NAME                 : 4 5 10 11 23 26
NUMBER               : 25
OR                   : 18
PLUS                 : 19
PRINT                : 9
RACC                 : 6 7 8 11
RETURN               : 12
RPAREN               : 6 7 8 9 11 23 24
SEMI                 : 2 3 8 8
SUP                  : 15
TIMES                : 20
WHILE                : 7
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 2 6 7 8 11
expression           : 6 7 8 9 10 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 24
params               : 5 11 23
start                : 0
statement            : 2 3 8 8

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMI
    (3) bloc -> . statement SEMI
    (6) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (7) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (8) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (9) statement -> . PRINT LPAREN expression RPAREN
    (10) statement -> . NAME EGAL expression
    (11) statement -> . DEF NAME LPAREN params RPAREN LACC bloc RACC
    (12) statement -> . RETURN expression

    IF              shift and go to state 4
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    PRINT           shift and go to state 7
    NAME            shift and go to state 8
    DEF             shift and go to state 9
    RETURN          shift and go to state 10

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMI
    (6) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (7) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (8) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (9) statement -> . PRINT LPAREN expression RPAREN
    (10) statement -> . NAME EGAL expression
    (11) statement -> . DEF NAME LPAREN params RPAREN LACC bloc RACC
    (12) statement -> . RETURN expression

    $end            reduce using rule 1 (start -> bloc .)
    IF              shift and go to state 4
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    PRINT           shift and go to state 7
    NAME            shift and go to state 8
    DEF             shift and go to state 9
    RETURN          shift and go to state 10

    statement                      shift and go to state 11

state 3

    (3) bloc -> statement . SEMI

    SEMI            shift and go to state 12


state 4

    (6) statement -> IF . LPAREN expression RPAREN LACC bloc RACC

    LPAREN          shift and go to state 13


state 5

    (7) statement -> WHILE . LPAREN expression RPAREN LACC bloc RACC

    LPAREN          shift and go to state 14


state 6

    (8) statement -> FOR . LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC

    LPAREN          shift and go to state 15


state 7

    (9) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 16


state 8

    (10) statement -> NAME . EGAL expression

    EGAL            shift and go to state 17


state 9

    (11) statement -> DEF . NAME LPAREN params RPAREN LACC bloc RACC

    NAME            shift and go to state 18


state 10

    (12) statement -> RETURN . expression
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 19

state 11

    (2) bloc -> bloc statement . SEMI

    SEMI            shift and go to state 23


state 12

    (3) bloc -> statement SEMI .

    IF              reduce using rule 3 (bloc -> statement SEMI .)
    WHILE           reduce using rule 3 (bloc -> statement SEMI .)
    FOR             reduce using rule 3 (bloc -> statement SEMI .)
    PRINT           reduce using rule 3 (bloc -> statement SEMI .)
    NAME            reduce using rule 3 (bloc -> statement SEMI .)
    DEF             reduce using rule 3 (bloc -> statement SEMI .)
    RETURN          reduce using rule 3 (bloc -> statement SEMI .)
    $end            reduce using rule 3 (bloc -> statement SEMI .)
    RACC            reduce using rule 3 (bloc -> statement SEMI .)


state 13

    (6) statement -> IF LPAREN . expression RPAREN LACC bloc RACC
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 24

state 14

    (7) statement -> WHILE LPAREN . expression RPAREN LACC bloc RACC
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 25

state 15

    (8) statement -> FOR LPAREN . statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (6) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (7) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (8) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (9) statement -> . PRINT LPAREN expression RPAREN
    (10) statement -> . NAME EGAL expression
    (11) statement -> . DEF NAME LPAREN params RPAREN LACC bloc RACC
    (12) statement -> . RETURN expression

    IF              shift and go to state 4
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    PRINT           shift and go to state 7
    NAME            shift and go to state 8
    DEF             shift and go to state 9
    RETURN          shift and go to state 10

    statement                      shift and go to state 26

state 16

    (9) statement -> PRINT LPAREN . expression RPAREN
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 27

state 17

    (10) statement -> NAME EGAL . expression
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 28

state 18

    (11) statement -> DEF NAME . LPAREN params RPAREN LACC bloc RACC

    LPAREN          shift and go to state 29


state 19

    (12) statement -> RETURN expression .
    (13) expression -> expression . INF expression
    (14) expression -> expression . INFEG expression
    (15) expression -> expression . SUP expression
    (16) expression -> expression . EGALEGAL expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . OR expression
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . DIVIDE expression

    SEMI            reduce using rule 12 (statement -> RETURN expression .)
    RPAREN          reduce using rule 12 (statement -> RETURN expression .)
    INF             shift and go to state 30
    INFEG           shift and go to state 31
    SUP             shift and go to state 32
    EGALEGAL        shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35
    PLUS            shift and go to state 36
    TIMES           shift and go to state 37
    MINUS           shift and go to state 38
    DIVIDE          shift and go to state 39


state 20

    (23) expression -> NAME . LPAREN params RPAREN
    (26) expression -> NAME .

    LPAREN          shift and go to state 40
    INF             reduce using rule 26 (expression -> NAME .)
    INFEG           reduce using rule 26 (expression -> NAME .)
    SUP             reduce using rule 26 (expression -> NAME .)
    EGALEGAL        reduce using rule 26 (expression -> NAME .)
    AND             reduce using rule 26 (expression -> NAME .)
    OR              reduce using rule 26 (expression -> NAME .)
    PLUS            reduce using rule 26 (expression -> NAME .)
    TIMES           reduce using rule 26 (expression -> NAME .)
    MINUS           reduce using rule 26 (expression -> NAME .)
    DIVIDE          reduce using rule 26 (expression -> NAME .)
    SEMI            reduce using rule 26 (expression -> NAME .)
    RPAREN          reduce using rule 26 (expression -> NAME .)


state 21

    (24) expression -> LPAREN . expression RPAREN
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 41

state 22

    (25) expression -> NUMBER .

    INF             reduce using rule 25 (expression -> NUMBER .)
    INFEG           reduce using rule 25 (expression -> NUMBER .)
    SUP             reduce using rule 25 (expression -> NUMBER .)
    EGALEGAL        reduce using rule 25 (expression -> NUMBER .)
    AND             reduce using rule 25 (expression -> NUMBER .)
    OR              reduce using rule 25 (expression -> NUMBER .)
    PLUS            reduce using rule 25 (expression -> NUMBER .)
    TIMES           reduce using rule 25 (expression -> NUMBER .)
    MINUS           reduce using rule 25 (expression -> NUMBER .)
    DIVIDE          reduce using rule 25 (expression -> NUMBER .)
    SEMI            reduce using rule 25 (expression -> NUMBER .)
    RPAREN          reduce using rule 25 (expression -> NUMBER .)


state 23

    (2) bloc -> bloc statement SEMI .

    IF              reduce using rule 2 (bloc -> bloc statement SEMI .)
    WHILE           reduce using rule 2 (bloc -> bloc statement SEMI .)
    FOR             reduce using rule 2 (bloc -> bloc statement SEMI .)
    PRINT           reduce using rule 2 (bloc -> bloc statement SEMI .)
    NAME            reduce using rule 2 (bloc -> bloc statement SEMI .)
    DEF             reduce using rule 2 (bloc -> bloc statement SEMI .)
    RETURN          reduce using rule 2 (bloc -> bloc statement SEMI .)
    $end            reduce using rule 2 (bloc -> bloc statement SEMI .)
    RACC            reduce using rule 2 (bloc -> bloc statement SEMI .)


state 24

    (6) statement -> IF LPAREN expression . RPAREN LACC bloc RACC
    (13) expression -> expression . INF expression
    (14) expression -> expression . INFEG expression
    (15) expression -> expression . SUP expression
    (16) expression -> expression . EGALEGAL expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . OR expression
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 42
    INF             shift and go to state 30
    INFEG           shift and go to state 31
    SUP             shift and go to state 32
    EGALEGAL        shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35
    PLUS            shift and go to state 36
    TIMES           shift and go to state 37
    MINUS           shift and go to state 38
    DIVIDE          shift and go to state 39


state 25

    (7) statement -> WHILE LPAREN expression . RPAREN LACC bloc RACC
    (13) expression -> expression . INF expression
    (14) expression -> expression . INFEG expression
    (15) expression -> expression . SUP expression
    (16) expression -> expression . EGALEGAL expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . OR expression
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 43
    INF             shift and go to state 30
    INFEG           shift and go to state 31
    SUP             shift and go to state 32
    EGALEGAL        shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35
    PLUS            shift and go to state 36
    TIMES           shift and go to state 37
    MINUS           shift and go to state 38
    DIVIDE          shift and go to state 39


state 26

    (8) statement -> FOR LPAREN statement . SEMI expression SEMI statement RPAREN LACC bloc RACC

    SEMI            shift and go to state 44


state 27

    (9) statement -> PRINT LPAREN expression . RPAREN
    (13) expression -> expression . INF expression
    (14) expression -> expression . INFEG expression
    (15) expression -> expression . SUP expression
    (16) expression -> expression . EGALEGAL expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . OR expression
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 45
    INF             shift and go to state 30
    INFEG           shift and go to state 31
    SUP             shift and go to state 32
    EGALEGAL        shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35
    PLUS            shift and go to state 36
    TIMES           shift and go to state 37
    MINUS           shift and go to state 38
    DIVIDE          shift and go to state 39


state 28

    (10) statement -> NAME EGAL expression .
    (13) expression -> expression . INF expression
    (14) expression -> expression . INFEG expression
    (15) expression -> expression . SUP expression
    (16) expression -> expression . EGALEGAL expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . OR expression
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . DIVIDE expression

    SEMI            reduce using rule 10 (statement -> NAME EGAL expression .)
    RPAREN          reduce using rule 10 (statement -> NAME EGAL expression .)
    INF             shift and go to state 30
    INFEG           shift and go to state 31
    SUP             shift and go to state 32
    EGALEGAL        shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35
    PLUS            shift and go to state 36
    TIMES           shift and go to state 37
    MINUS           shift and go to state 38
    DIVIDE          shift and go to state 39


state 29

    (11) statement -> DEF NAME LPAREN . params RPAREN LACC bloc RACC
    (4) params -> . NAME
    (5) params -> . NAME COMMA params

    NAME            shift and go to state 46

    params                         shift and go to state 47

state 30

    (13) expression -> expression INF . expression
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 48

state 31

    (14) expression -> expression INFEG . expression
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 49

state 32

    (15) expression -> expression SUP . expression
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 50

state 33

    (16) expression -> expression EGALEGAL . expression
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 51

state 34

    (17) expression -> expression AND . expression
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 52

state 35

    (18) expression -> expression OR . expression
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 53

state 36

    (19) expression -> expression PLUS . expression
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 54

state 37

    (20) expression -> expression TIMES . expression
    (13) expression -> . expression INF expression
    (14) expression -> . expression INFEG expression
    (15) expression -> . expression SUP expression
    (16) expression -> . expression EGALEGAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . NAME LPAREN params RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . NAME

    NAME            shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22

    expression                     shift and go to state 55

state 38

    (21) expression -> expression MINUS . expression
    (13) expression -> . expression INF expression
